--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 </head>
 <body>
-  <!-- Navigation -->
-  <nav>
+  <!-- Navigation Bar -->
+  <div class="hamburguer">
+       <span>|||</span>
+  <div class="hamburger-content">
+  <!-- <nav > -->
     <ul>
       <li><a href="#header">Home</a></li>
       <li><a href="#about">About</a></li>
@@ -17,18 +20,20 @@
       <li><a href="#team">Team</a></li>
       <li><a href="#footer">Contact Us</a></li>
     </ul>
-  </nav>
+ 
+  <!-- </nav> -->
+</div>
+
 
   <!-- Header section -->
-  <section id="header">
-    <div class="header-content">
+   <div class="header">
       <h1 id="bh1"><-- Barney Craft Beer --></h1>
       <h2 id="bh2">Brewing the Finest Craft Beer</h2>
     </div>
-  <div class="photobot">
-   <img id="firstimg" src="./assets/craftbeer.jpg" alt="craft-beer">
+   <section id="splash-screen">
+    
    <a href="#gallery-container" class="btn">Shop Now</a>
- </div>
+ 
    
   </section>
 
